--- a/arch/arm64/configs/lineage_s2_defconfig
+++ b/arch/arm64/configs/lineage_s2_defconfig
@@ -1585,7 +1585,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_OEM_FW_UPDATE=y
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
-# CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
+CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 # CONFIG_TOUCHSCREEN_BU21150 is not set
@@ -1680,9 +1680,10 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_MFD_HSU is not set
-CONFIG_SERIAL_CORE=y
+# CONFIG_SERIAL_CORE is not set
+# CONFIG_SERIAL_CORE_CONSOLE is not set
 # CONFIG_SERIAL_JSM is not set
-CONFIG_SERIAL_MSM_HS=y
+# CONFIG_SERIAL_MSM_HS is not set
 CONFIG_SERIAL_MSM_HSL=y
 # CONFIG_SERIAL_MSM_HSL_CONSOLE is not set
 # CONFIG_SERIAL_SCCNXP is not set
